plugins {
    id 'application'
    id 'java'
}

sourceCompatibility = 1.19

mainClassName = 'com.github.nikammerlaan.aoc.Main'

repositories {
    mavenCentral()
}

dependencies {
    implementation libs.apache.commons.collections
    implementation libs.jackson
    implementation libs.jgrapht

    testImplementation libs.junit.jupiter.api
    testImplementation libs.junit.jupiter.params
    testRuntimeOnly libs.junit.jupiter.engine
}

test {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}

tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

compileJava.options.encoding = 'UTF-8'
